--- a/.github/workflows/static_checks.yml
+++ b/.github/workflows/static_checks.yml
@@ -17,3 +17,7 @@ jobs:
       - name: File formatting checks (file_format.sh)
         run: |
           bash ./.github/workflows/file_format.sh
+
+      - name: Style checks via clang-format (clang_format.sh)
+        run: |
+          bash ./.github/workflows/clang_format.sh
